--- a/theater/views/preview.jade
+++ b/theater/views/preview.jade
@@ -1,5 +1,20 @@
 extends layout
 
 block content
+  table(id="template-data")
+    thead
+      tr
+        th key
+        th value
+        th -
+    tfoot
+      tr
+        th(colspan=3)
+          button(id="add-row") Add row
+    tbody
+
   div(id="rendered-template")!= renderedTemplate
   div(id="markdown-template")!= template
+  script(src='/javascripts/markdown-it.min.js')
+  script(src='/javascripts/mustache.min.js')
+  script(src='/javascripts/preview.js')
