Fix static serving

--- a/views/preview.jade
+++ b/views/preview.jade
@@ -15,6 +15,6 @@ block content
 
   div(id="rendered-template")!= renderedTemplate
   div(id="markdown-template")!= template
-  script(src='/javascripts/markdown-it.min.js')
-  script(src='/javascripts/mustache.min.js')
-  script(src='/javascripts/preview.js')
+  script(src='/static/javascripts/markdown-it.min.js')
+  script(src='/static/javascripts/mustache.min.js')
+  script(src='/static/javascripts/preview.js')
